syntax = "proto3";

package com.graph.flow.proto;
option java_multiple_files = true;

message Node {
  string address = 1;
  int32 port = 2;
}

message Setting {
  string address = 1;
}

message ClusterContext {
  repeated Node nodes = 1;
  Setting settings = 2;
  int64 timestamp = 3;
}

message BootstrapFlowRequest{
  bytes data = 1;
}

message BootstrapFlowResponse{
  bool success = 1;
}

message PipeRequest{
  int64 flowId = 1;
  int32 index = 2;
  bytes data = 3;
}

message PipeResponse{
  bool success = 1;
}

message FlowReportRequest{
  Node node = 1;
  repeated int64 receives = 2;
  repeated int64 sends = 3;
}

message FlowReportResponse{
  bool finished = 1;
}

service ExecutorRpcService {

  rpc bootstrap(BootstrapFlowRequest) returns (BootstrapFlowResponse);

  rpc process(PipeRequest) returns (PipeResponse);

  rpc flowReport(FlowReportRequest) returns (FlowReportResponse);
}